# parser-dependabot

./: .gitignore  .pre-commit-config.yaml  README.md  alert.txt  env  package-lock.json  pyproject.toml  requirements.txt  sample_payload.json
.github/workflows/: Owasp_Zap.yml  Trivy.yml  ci.yml
app/: config.py  db.py  main.py  mapper.py  webhook.py
app/core/: config.py
app/db/: connection.py  repository.py
app/hooks/: mapper.py  webhook.py
app/models/: alert.py  alert_model.py
app/repositories/: alert_repo.py  base_repo.py
app/routes/: get_alert_by_id.py  webhook.py
app/routes/items/: get_alert_service.py
app/routes/webhook/: processor.py  router.py  security.py
app/services/: alert_service.py
app/services/mappers/: dependabot_mapper.py  trivy_mapper.py  zap_mapper.py
tests/: conftest.py  test_alert_repository.py  test_alert_service.py  test_alert_service_integration.py  test_alert_service_integration_zap.py  test_alert_service_zap.py  test_config.py  test_connection.py  test_db.py  test_dependabot_mapper.py  test_get_alert_by_id.py  test_get_alert_service.py  test_hmac.py  test_main.py  test_mapper.py  test_supabase_connection.py  test_webhook.py  test_webhook_zap.py  test_zap_mapper.py
tests/fixtures/: dependabot_webhook_complete.json  dependabot_webhook_minimal.json  dependabot_webhook_no_cve.json
tests/unitTest/: test_alert_repo.py  test_dependabot_mapper.py  test_processor.py  test_router.py
